test/files/neg/t11843.scala
object t11843 {
  "".isInstanceOf[Int]
  "".asInstanceOf[Int]
  "".$isInstanceOf[Int]
  "".$asInstanceOf[Int]
}